fixed the styling alignment problem. added cancel to new.jsx. submission #1

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,7 +105,7 @@ nav {
   /* align-items: flex-start; */
   width: 220px;
   height: fit-content;
-  margin: 0 auto;
+  margin: 0 auto 0 .2em;
   padding: 0 .5em;
   border-radius: 10px;
   background-color: #000;
@@ -150,7 +150,7 @@ a {
   color: black;
 }
 
-.cancel-edit {
+.cancel-add-edit {
   border: .3px solid black;
   background-color: white;
   padding: .2em;
